# ikigai-personal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
