[package]
name = "ikigai-personal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Personal contexts for ikigai — OS-backed resources (contacts, calendar, availability) under urn:personal:*. macOS-first; Windows and Linux build but report unsupported for now."
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-personal"
homepage = "https://github.com/ikigai-rs/ikigai-personal"
readme = "README.md"
keywords = ["ikigai", "roc", "personal", "calendar", "contacts"]
categories = ["os"]

[dependencies]
ikigai-core = "0.1.6"

[dev-dependencies]
futures = "0.3"
